--- a/amazon.html
+++ b/amazon.html
@@ -208,12 +208,18 @@
             <a class="txt-marca" href="">Marca: WPOZD</a>
           </div>
           <div class="estrellas-section">
-            <span id="puntuacion"> 0 </span>
-            <div class="estrella"><i id="star1" class="bx bx-star"></i></div>
-            <div class="estrella"><i id="star2" class="bx bx-star"></i></div>
-            <div class="estrella"><i id="star3" class="bx bx-star"></i></div>
-            <div class="estrella"><i id="star4" class="bx bx-star"></i></div>
-            <div class="estrella"><i id="star5" class="bx bx-star"></i></div>
+            <div class="numero-puntuacion">
+              <span id="puntuacion"> 5 </span>
+            </div>
+            <div class="estrellas">
+              <div class="estrella"><i id="star1" class=" bx bx-star"></i></div>
+              <div class="estrella"><i id="star2" class=" bx bx-star"></i></div>
+              <div class="estrella"><i id="star3" class=" bx bx-star"></i></div>
+              <div class="estrella"><i id="star4" class=" bx bx-star"></i></div>
+              <div class="estrella separacion">
+                <i id="star5" class="bx bx-star"></i>
+              </div>
+            </div>
             <div class="seccion-calificaciones">
               <a class="txt-marca" href="#"> 23 calificaciones</a>
             </div>
@@ -221,7 +227,7 @@
           <div class="seccion-opcion">
             <div class="opcion-text">
               <span class="txt-opcion-blanco">Opcion</span>
-              <span class="txt-opcion-naranja">amazon</span>
+              <span class="txt-opcion-naranja">Amazon</span>
             </div>
           </div>
         </div>
@@ -238,136 +244,148 @@
 
           <div class="seccion-2-item-devoluciones">
             <div class="item-devoluciones">
-              <span class="tamaño-menor"> Devoluciones </span>
-              <span class="tamaño-mayor"> GRATIS </span>
+              <span class="azul devoluciones-tamaño-menor"> Devoluciones </span>
+              <span class="azul devoluciones-tamaño-mayor"> GRATIS </span>
             </div>
             <div class="item-devoluciones">
-              <span class="text-item-devoluciones"
+              <span class="text-item-devoluciones-inport"
                 >Sin cargos de importación y US$10.96 de envío a Colombia</span
               >
-              <a href="#">Detalles</a>
+              <a class="no-estilos azul" href="#">Detalles</a>
             </div>
 
             <div class="item-devoluciones-2">
               <span class="text-item-devoluciones-info-envio"
                 >Disponible a un precio menor de
-                <a href="#">otros vendedores</a> que podrían no ofrecer envío
-                Prime gratis.</span>
+                <a class="no-estilos azul" href="#">otros vendedores</a> que podrían no
+                ofrecer envío Prime gratis.</span
+              >
             </div>
           </div>
           <div class="seccion-2-item-3">
             <div class="item-caracteristicas">
-                <div class="item-caracteristicas-1">
-                    <span>
-                        Marca
-                    </span>
-                    <span>
-                        Tema
-                    </span>
-                    <span>
-                        Material
-                    </span>
-                    <span>
-                        Componenetes incluidos
-                    </span>
-                </div>
-                <div class="item-caracteristicas-2">
-                    WPOZD
-                </span>
-                <span>
-                    Horror
-                </span>
-                <span>
-                    Goma
-                </span>
-                <span>
-                    1
-                </span>
-                </div>                
+              <div class="item-caracteristicas-1">
+                <span class="negrita"> Marca </span>
+                <span class="negrita"> Tema </span>
+                <span class="negrita"> Material </span>
+                <span class="negrita"> Componenetes incluidos </span>
+              </div>
+              <div class="item-caracteristicas-2">
+                <span> WPOZD </span>
+                <span> Horror </span>
+                <span> Goma </span>
+                <span> 1 </span>
+              </div>
             </div>
           </div>
         </div>
-<hr>
+        <hr/>
         <div class="box-seccion-3 seccion">
-            <div class="seccion-3-item-1">
-                <div class="title-sobre-articulo">
-                    <h4>sobre este articulo</h4>
-                </div>
-                <div class="lista-sobre-articulo">
-                    <ul>
-                        <li>Adams casa el miércoles para cortar las manos y la sutura de la piel, juguetes espeluznantes le cortaron las manos.</li>
-                        <li>Decoración perfecta para sala de estar, estudio u oficina, puedes ponerlo en cualquier lugar o usarlo como un accesorio mágico.</li>
-                        <li>El estreno del miércoles de "The Addams Family" (" La familia Addams) debido a su "trama" es ampliamente popular entre los fanáticos. La mano está hecha de látex y tiene un diseño realista,</li>
-                        <li>Accesorios de fotos interesantes para juegos de rol de la familia Adams. Miércoles Scary prop decorativo estatua modelo de mano</li>
-                        <li>de la familia Addams cosas con goma: revestimiento protector resistente a la intemperie, para garantizar que el impermeable no se desvanezca. El diseño de la superficie envejecida hace que la decoración sea más realista. Dado que nuestro producto está hecho de látex, hay algo de olor antes de abrir el paquete. Esto es normal. Desenvolver y dejar reposar durante dos o tres días. El olor desaparecerá.</li>
-                    </ul>
-                </div>
+          <div class="seccion-3-item-1">
+            <div class="title-sobre-articulo">
+              <h4>sobre este articulo</h4>
             </div>
+            <div class="lista-sobre-articulo">
+              <ul>
+                <li>
+                  Adams casa el miércoles para cortar las manos y la sutura de
+                  la piel, juguetes espeluznantes le cortaron las manos.
+                </li>
+                <li>
+                  Decoración perfecta para sala de estar, estudio u oficina,
+                  puedes ponerlo en cualquier lugar o usarlo como un accesorio
+                  mágico.
+                </li>
+                <li>
+                  El estreno del miércoles de "The Addams Family" (" La familia
+                  Addams) debido a su "trama" es ampliamente popular entre los
+                  fanáticos. La mano está hecha de látex y tiene un diseño
+                  realista,
+                </li>
+                <li>
+                  Accesorios de fotos interesantes para juegos de rol de la
+                  familia Adams. Miércoles Scary prop decorativo estatua modelo
+                  de mano
+                </li>
+                <li>
+                  de la familia Addams cosas con goma: revestimiento protector
+                  resistente a la intemperie, para garantizar que el impermeable
+                  no se desvanezca. El diseño de la superficie envejecida hace
+                  que la decoración sea más realista. Dado que nuestro producto
+                  está hecho de látex, hay algo de olor antes de abrir el
+                  paquete. Esto es normal. Desenvolver y dejar reposar durante
+                  dos o tres días. El olor desaparecerá.
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
-
-
       </div>
       <!--! 4, contenedor de la cuarta caja donde se encuentra un resumen de la compra para agregar al carrito -->
       <div class="contenido box-contenido-compra">
-        <div class="seccion-2-item-precio">
+        <div class="box-contenido-compra-margen">
+          <div class="seccion-2-item-precio">
             <span class="tamaño-menor">
               US$
               <span class="tamaño-mayor"> 25 </span>
               .99
             </span>
-        </div>
-        <div class="item-devoluciones">
-            <span class="tamaño-menor"> Devoluciones </span>
-            <span class="tamaño-mayor"> GRATIS </span>
-        </div>
-        <div class="item-devoluciones">
+          </div>
+          <div class="item-devoluciones">
+            <span class="devoluciones-tamaño-menor"> Devoluciones </span>
+            <span class="devoluciones-tamaño-mayor"> GRATIS </span>
+          </div>
+          <div class="item-devoluciones">
             <span class="text-item-devoluciones"
               >Sin cargos de importación y US$10.96 de envío a Colombia</span
             >
-            <a href="#">Detalles</a>
-        </div>
-        <div class="contenido-info">
-            <span>Entrega GRATIS el lunes, 4 de diciembre a Colombia en pedidos elegibles de más de $35</span>
-            <span>O entrega más rápida el viernes, 1 de diciembre. Realiza el pedido en 5 hrs 20 mins</span>
-        </div>
-        <div class="contenido-enviar">
+            <a class="no-estilos azul" href="#">Detalles</a>
+          </div>
+          <div class="contenido-info">
+            <span class="contenido-info-separacion-1"
+              >Entrega GRATIS el <span class="negrita">lunes, 4 de diciembre a </span>Colombia en pedidos
+              elegibles de más de $35</span
+            >
+            <span class="contenido-info-separacion-2"
+              >O entrega más rápida el <span class="negrita"> viernes, 1 de diciembre.</span> Realiza el pedido
+              en <span class="verde">5 hrs 20 mins</span></span
+            >
+          </div>
+          <div class="contenido-enviar">
             <div class="box-icon-location">
-                <i class="bx bxs-location-plus"></i>
-              </div>
-            <a href="#">Enviar a colombia</a>
-        </div>
-        <div class="contenido-advertencia-stock">
+              <i class="bx bxs-location-plus"></i>
+            </div>
+            <a class="no-estilos azul" href="#">Enviar a colombia</a>
+          </div>
+          <div class="contenido-advertencia-stock">
             <span>Solo queda(n) 11 en stock (hay más unidades en camino).</span>
-        </div>
-        <div>
+          </div>
+          <div>
             <select name="" id="">
-                <option value="">Cantidad :1</option>
-                <option value="">Cantidad :2</option>
-                <option value="">Cantidad :3</option>
-                <option value="">Cantidad :4</option>
-                <option value="">Cantidad :5</option>
-                <option value="">Cantidad :6</option>
-                <option value="">Cantidad :7</option>
-                <option value="">Cantidad :8</option>
-                <option value="">Cantidad :9</option>
-                <option value="">Cantidad :10</option>
-                <option value="">Cantidad :11</option>
+              <option value="">Cantidad :1</option>
+              <option value="">Cantidad :2</option>
+              <option value="">Cantidad :3</option>
+              <option value="">Cantidad :4</option>
+              <option value="">Cantidad :5</option>
+              <option value="">Cantidad :6</option>
+              <option value="">Cantidad :7</option>
+              <option value="">Cantidad :8</option>
+              <option value="">Cantidad :9</option>
+              <option value="">Cantidad :10</option>
+              <option value="">Cantidad :11</option>
             </select>
-        </div>
-        <div class="btn-agregar-comprar">
+          </div>
+          <div class="btn-agregar-comprar">
             <div class="btn-agregar-carrito">
-                <div class="agregar">
-                    agregar al carrito
-                </div>
+              <div class="agregar">agregar al carrito</div>
             </div>
             <div class="btn-comprar-ahora">
-                <div class="comprar">
-                    Comprar ahora
-                </div>
+              <div class="comprar">Comprar ahora</div>
             </div>
+          </div>
         </div>
-
-      </div>
+        </div>
+       
     </div>
 
     <!--///////////////////////// Fin Header///////////////////// -->
