--- a/amazon.html
+++ b/amazon.html
@@ -286,7 +286,7 @@
               <h4>sobre este articulo</h4>
             </div>
             <div class="lista-sobre-articulo">
-              <ul>
+              <ul class="lista-articulo">
                 <li>
                   Adams casa el miércoles para cortar las manos y la sutura de
                   la piel, juguetes espeluznantes le cortaron las manos.
@@ -357,11 +357,11 @@
             </div>
             <a class="no-estilos azul" href="#">Enviar a colombia</a>
           </div>
-          <div class="contenido-advertencia-stock">
-            <span>Solo queda(n) 11 en stock (hay más unidades en camino).</span>
+          <div class=" contenido-advertencia-stock">
+            <span class="rojo advertencia-stock">Solo queda(n) 11 en stock (hay más unidades en camino).</span>
           </div>
-          <div>
-            <select name="" id="">
+          <div class="contenido-cantidad">
+            <select class="contenido-lista-cantidad" name="" id="">
               <option value="">Cantidad :1</option>
               <option value="">Cantidad :2</option>
               <option value="">Cantidad :3</option>
